# MCP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEMO_MODE.md  LICENSE  Makefile  PARA_TESTAR.md  PROGRESS.md  PROMPT_COMPLETO_VPS.md  PROMPT_RESUMIDO_VPS.md  README.md  TESTE_RAPIDO.md  VPS_DEPLOYMENT_PROMPT.md  pyproject.toml  setup.bat  setup.sh  test_demo_mode.py  test_sdk_example.py
docker/: Dockerfile  docker-compose.yml
docs/: IMPLEMENTATION_PLAN.md  PROMPT_FOR_SERVER_CLAUDE.md  QUICK_REFERENCE.md
src/mcp_crowdstrike/: __init__.py  config.py  main.py  sdk.py  server.py
src/mcp_crowdstrike/providers/: __init__.py  base.py  crowdstrike.py  mock.py
src/mcp_crowdstrike/tools/: __init__.py  registry.py
src/mcp_crowdstrike/tools/crowdstrike/: __init__.py  detections.py  hosts.py  incidents.py
src/mcp_crowdstrike/utils/: __init__.py  logging.py  responses.py
tests/: __init__.py  conftest.py
tests/test_integration/: __init__.py  test_api.py
tests/test_sdk/: __init__.py  test_sdk_client.py
tests/test_tools/: __init__.py  test_crowdstrike_tools.py
